--- a/rule4be/templates/rule4be/edit_aol.html
+++ b/rule4be/templates/rule4be/edit_aol.html
@@ -1,22 +1,21 @@
-
-<h1>Edit AOL</h1>
-
-
-<form hx-post="{% url 'edit_aol' aol_id %}" hx-trigger="submit" hx-target="#create-form" id="create-form">
-    {% csrf_token %}
-    <!-- Include the necessary input fields -->
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name" value="{{ form.instance.name }}" required>
+<div class="card-form__container border rounded-md mt-5 p-3 shadow-inner bg-white min-w-72">
+    <div
+        class="modal-form">
+        <h1 class="form__title">Edit AOL</h1>
+        <form hx-post="{% url 'edit_aol' aol_id %}" hx-trigger="submit" hx-target="#create-form" id="create-form">
+            {% csrf_token %}
+            <!-- Include the necessary input fields -->
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name" value="{{ form.instance.name }}" required>
+            </div>
+            <div>
+                <label for="description">Description:</label>
+                <textarea type="text" name="description" id="description" required>{{ form.instance.description }}</textarea>
+            </div>
+            <div>
+                <button type="submit">Update AOL</button>
+            </div>
+        </form>
     </div>
-    <div>
-        <label for="description">Description:</label>
-        <textarea type="text" name="description" id="description" required>{{ form.instance.description }}</textarea>
-    </div>
-    <div>
-        <button type="submit">Update AOL</button>
-    </div>
-</form>
-
-<!-- Display the result of the login attempt -->
-<div id="login-result"></div>
+</div>
