--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -29,14 +29,17 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
-    <!-- Form Valiidation -->
+    <!-- Form Validation -->
     <script src="{% static 'js/form-validation.js' %}" defer></script>
+
+    <!-- Global JS -->
+    <script src="{% static 'js/global.js' %}" defer></script>
 
     {% block styles %}{% endblock %}
 </head>
 
-<body class="bg-gray-50">
-    <main class="w-full min-h-screen flex flex-col bg-gray-50">
+<body class="bg-white">
+    <main class="w-full min-h-screen flex flex-col">
         <div class="page-content__container mx-auto lg:w-[1440px] mt-5">
             {% block content %}
 
