--- a/rule4be/templates/rule4be/today.html
+++ b/rule4be/templates/rule4be/today.html
@@ -1,6 +1,6 @@
-<div>
+<div class="snapshot">
     {% for snapshot in api_data %}
-    <div class="snapshot-item border border-gray-100 rounded-md p-3 hover:bg-[#fdfdfd] transition-all">
+    <div class="snapshot-item border border-slate-300 rounded-md p-3 bg-white hover:bg-[#fdfdfd] transition-all">
         <h4 class="font-semibold">{{ snapshot.relative_date }}:</h4>
         <p>{{ snapshot.body }}</p>
 
